# Rust-AI-simulation

./: README.md  config.py  main.py  map.py  player.py  q_table.json  recipes.py  run-linux.sh  run-windows.bat  run.sh  setup-windows.ps1  simulation.py  wipe.sh
rust_simulation/: Cargo.toml  biomes.json  items.json  q_tables.json  recipes.json  resources.json  road_config.json  run.bat
rust_simulation/benches/: ai_bench.rs  map_generation_bench.rs  pathfinding_bench.rs  rendering_bench.rs
rust_simulation/data/: config.toml  items.json  recipes.json  resources.json
rust_simulation/src/: actions.rs  agent.rs  animal.rs  async_task.rs  brain.rs  components.rs  config.rs  consts.rs  dropped_item.rs  entity.rs  errors.rs  events.rs  fov.rs  game.rs  item.rs  lib.rs  main.rs  map.rs  map_generator.rs  pathfinding.rs  pathfinding_async.rs  player.rs  recipes.rs  renderer.rs  road.rs  road_builder.rs  road_manager.rs  serde_helpers.rs  spatial.rs  state.rs  systems.rs  world.rs
rust_simulation/src/animals/: mod.rs  pack.rs  (+2 more)
rust_simulation/tests/: animal_test.rs  brain_test.rs  building_logic_test.rs  building_test.rs  combat_test.rs  common.rs  crafting_test.rs  death_test.rs  eating_test.rs  fov_test.rs  gathering_test.rs  goal_selection_test.rs  hunger_eating_test.rs  hunger_test.rs  hunting_test.rs  map_modification_test.rs  map_test.rs  movement_test.rs  path_movement_test.rs  pathfinding_performance_test.rs  pathfinding_test.rs  persistence_test.rs  pickup_test.rs  q_learning_test.rs  simulation.rs  state_test.rs  stockpile_test.rs  storage_test.rs  throwing.rs
(+78 files in other folders)
