[package]
name = "rust_simulation"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
dashmap = "5.5.3"
noise = "0.9.0"
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
thiserror = "1.0.69"
rayon = "1.8.1"
num_cpus = "1.16.0"
bevy_ecs = "0.13.0"
bevy_tasks = "0.13.0"
log = "0.4"
crossbeam-channel = "0.5"
bevy = { version = "0.13.0", features = ["trace_tracy"] }
toml = "0.8.12"
sysinfo = "0.30.13"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "ai_bench"
harness = false
