[package]
name = "rust_simulation"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
dashmap = "5.5.3"
noise = "0.9.0"
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
thiserror = "1.0.69"
rayon = "1.8.1"
num_cpus = "1.16.0"
log = "0.4"
bevy_ecs = "0.13.0"
bevy_tasks = "0.13.0"
bevy = { version = "0.13.0", default-features = false, features = ["bevy_render", "bevy_ui", "multi-threaded", "bevy_pbr"] }
toml = "0.8.12"
sysinfo = "0.30.13"
clap = { version = "4.5.4", features = ["derive"] }
directories = "5.0"
rstar = { version = "0.12.2", features = ["serde"] }

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "ai_bench"
harness = false
